// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Integration Test: GameBoard + Message System - Message Display should always maintain fixed height for message area (Snapshot Test for Layout Stability): message-container-initial 1`] = `
<div
  class="fixed top-0 left-0 right-0 z-50 h-16 flex items-center justify-center px-4"
  data-testid="message-box"
  lang="ja"
  style="height: 64px;"
>
  <div
    aria-live="polite"
    class="
          bg-blue-50
          transition-opacity
          duration-300
          rounded-lg
          px-4
          py-2
          flex
          items-center
          gap-3
          max-w-2xl
          w-full
        "
    role="status"
    style="opacity: 0; transition-property: opacity; transition-duration: 0.3s;"
  >
    <div
      aria-label="info"
      class="flex-shrink-0"
    >
      <svg
        aria-hidden="true"
        class="w-5 h-5 text-blue-600"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        />
      </svg>
    </div>
    <p
      class="text-sm text-gray-800 leading-relaxed line-clamp-2 break-all flex-1"
      style="font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans JP", sans-serif; line-height: 1.5;"
    />
  </div>
</div>
`;

exports[`Integration Test: GameBoard + useGameErrorHandler - Message Display should always maintain fixed height for message area (Snapshot Test for Layout Stability): message-container-initial 1`] = `
<div
  class="h-16 flex items-center justify-center"
>
  <div
    class="notification-message bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded transition-opacity duration-200 opacity-0"
  >
     
  </div>
</div>
`;

exports[`Integration Test: GameBoard + useGameErrorHandler - Message Display should always maintain fixed height for message area (Snapshot Test for Layout Stability): message-container-visible 1`] = `
<div
  class="h-16 flex items-center justify-center"
>
  <div
    class="notification-message bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded transition-opacity duration-200 opacity-100"
  >
    有効な手がありません。パスしました。
  </div>
</div>
`;
